--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="#">
-                                <img src="assets/images/logo_.png" alt="Logo">
+                                <img src="assets/images/logo_.png" alt="SWS">
                             </a>
 
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarEight" aria-controls="navbarEight" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,6 +87,9 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#about">SOBRE MIM</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="page-scroll" href="#produtos">PRODUTOS</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#portfolio">PORTFOLIO</a>
@@ -191,6 +194,7 @@
 
     <!--====== SAIDEBAR PART START ======-->
 
+	<!--
     <div class="sidebar-right">
         <div class="sidebar-close">
             <a class="close" href="#close"><i class="lni-close"></i></a>
@@ -198,7 +202,7 @@
         <div class="sidebar-content">
             <div class="sidebar-logo text-center">
                 <a href="#"><img src="assets/images/logo-alt.png" alt="Logo"></a>
-            </div> <!-- logo -->
+            </div>
             <div class="sidebar-menu">
                 <ul>
                     <li><a href="#">ABOUT</a></li>
@@ -206,17 +210,17 @@
                     <li><a href="#">RESOURCES</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
-            </div> <!-- menu -->
+            </div>
             <div class="sidebar-social d-flex align-items-center justify-content-center">
                 <span>FOLLOW US</span>
                 <ul>
                     <li><a href="#"><i class="lni-twitter-original"></i></a></li>
                     <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
                 </ul>
-            </div> <!-- sidebar social -->
-        </div> <!-- content -->
+            </div>
+        </div>
     </div>
-    <div class="overlay-right"></div>
+    <div class="overlay-right"></div> -->
 
     <!--====== SAIDEBAR PART ENDS ======-->
     
@@ -230,8 +234,8 @@
                         <img src="assets/images/services_.png" alt=" ">
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
-                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">The future of designing starts here</h4>
-                        <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">An open platform for presentations and content collaboration. Sign up to get early access.</p>
+                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Sistemas Web Simples</h4>
+                        <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Sistemas web internos simples para controle e registro de dados</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -243,8 +247,8 @@
                             <img src="assets/images/icon-1.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
-                            <h4 class="about-title">Powerful templates</h4>
-                            <p class="text">Poorly designed presentations are a thing of the past. Create beautiful and high-quality content that is aligned.</p>
+                            <h4 class="about-title">PHP</h4>
+                            <p class="text"> </p>
                         </div>
                     </div> <!-- single about -->
                 </div>
@@ -254,8 +258,8 @@
                             <img src="assets/images/icon-2.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
-                            <h4 class="about-title">Designed for everyone</h4>
-                            <p class="text">Poorly designed presentations are a thing of the past. Create beautiful and high-quality content that is aligned.</p>
+                            <h4 class="about-title">SQL</h4>
+                            <p class="text"> </p>
                         </div>
                     </div> <!-- single about -->
                 </div>
@@ -265,7 +269,7 @@
                             <img src="assets/images/icon-3.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
-                            <h4 class="about-title">Work anywhere</h4>
+                            <h4 class="about-title">jQuery</h4>
                             <p class="text">Poorly designed presentations are a thing of the past. Create beautiful and high-quality content that is aligned.</p>
                         </div>
                     </div> <!-- single about -->
@@ -276,7 +280,7 @@
                             <img src="assets/images/icon-4.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
-                            <h4 class="about-title">Updated in real time</h4>
+                            <h4 class="about-title">Bootstrap</h4>
                             <p class="text">Poorly designed presentations are a thing of the past. Create beautiful and high-quality content that is aligned.</p>
                         </div>
                     </div> <!-- single about -->
@@ -286,6 +290,164 @@
     </section>
 
     <!--====== ABOUT PART ENDS ======-->
+
+    <!--====== produtos PART START ======-->
+
+    <section id="produtos" class="produtos-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="section-title text-center pb-20">
+                        <h3 class="title">Our Portfolio</h3>
+                        <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    </div> <!-- row -->
+                </div>
+            </div> <!-- row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="portfolio-menu pt-30 text-center">
+                        <ul>
+                            <li data-filter="*" class="active">ALL WORK</li>
+                            <li data-filter=".branding-3">BRANDING</li>
+                            <li data-filter=".marketing-3">MARKETING</li>
+                            <li data-filter=".planning-3">PLANNING</li>
+                            <li data-filter=".research-3">RESEARCH</li>
+                        </ul>
+                    </div> <!-- portfolio menu -->
+                </div>
+            </div> <!-- row -->
+            <div class="row grid">
+                <div class="col-lg-4 col-sm-6 branding-3 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/portfolio-1.png" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/portfolio-1.png"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#">Graphics Design</a></h4>
+                            <p class="text">Short description for the ones who look for something new. Awesome!</p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 marketing-3 research-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/portfolio-2.png" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/portfolio-2.png"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#">Graphics Design</a></h4>
+                            <p class="text">Short description for the ones who look for something new. Awesome!</p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 branding-3 marketing-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/portfolio-3.png" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/portfolio-3.png"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#">Graphics Design</a></h4>
+                            <p class="text">Short description for the ones who look for something new. Awesome!</p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3 research-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/portfolio-4.png" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/portfolio-4.png"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#">Graphics Design</a></h4>
+                            <p class="text">Short description for the ones who look for something new. Awesome!</p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 marketing-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/portfolio-5.png" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/portfolio-5.png"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#">Graphics Design</a></h4>
+                            <p class="text">Short description for the ones who look for something new. Awesome!</p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+                <div class="col-lg-4 col-sm-6 planning-3">
+                    <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
+                        <div class="portfolio-image">
+                            <img src="assets/images/portfolio-6.png" alt="">
+                            <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                                <div class="portfolio-content">
+                                    <div class="portfolio-icon">
+                                        <a class="image-popup" href="assets/images/portfolio-6.png"><i class="lni-zoom-in"></i></a>
+                                    </div>
+                                    <div class="portfolio-icon">
+                                        <a href="#"><i class="lni-link"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-text">
+                            <h4 class="portfolio-title"><a href="#">Graphics Design</a></h4>
+                            <p class="text">Short description for the ones who look for something new. Awesome!</p>
+                        </div>
+                    </div> <!-- single portfolio -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
+    <!--====== produtos PART ENDS ======-->
     
     <!--====== portfolio PART START ======-->
 
