--- a/index.html
+++ b/index.html
@@ -368,10 +368,7 @@
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                                 <div class="portfolio-content">
                                     <div class="portfolio-icon">
-                                        <a class="image-popup" href="assets/images/portfolio-1.png"><i class="lni-zoom-in"></i></a>
-                                    </div>
-                                    <div class="portfolio-icon">
-                                        <a href="#"><i class="lni-link"></i></a>
+                                        <a class="image-popup" href="assets/images/portfolio-1.png"><a href="assets/projects/webschool/index.html"><i class="lni-zoom-in"></i></a></a>
                                     </div>
                                 </div>
                             </div>
