--- a/assets/projects/webschool/responsavel/alunos.html
+++ b/assets/projects/webschool/responsavel/alunos.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Meus alunos</strong> <p/>
-
+                <a href='aluno.html'>Aluno do Responsavel</a><br/>
             </div>
         </div>
 
