--- a/assets/projects/webschool/admin/index.html
+++ b/assets/projects/webschool/admin/index.html
@@ -19,7 +19,7 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../logout">Sair</a>
+'                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -31,12 +31,12 @@
 
         <div class="container">
             <div class="jumbotron text-center">
-                <a href="turmas" class="btn btn-light btn btn-block">Turmas</a>
-                <a href="disciplinas" class="btn btn-light btn btn-block">Disciplinas</a>
-                <a href="professores" class="btn btn-light btn btn-block">Professores</a>
-                <a href="alunos" class="btn btn-light btn btn-block">Alunos</a>
-                <a href="responsaveis" class="btn btn-light btn btn-block">Responsáveis</a>
-                <a href="../logout" class="mobile btn btn-danger btn btn-block" >Sair</a>
+                <a href="turmas.html" class="btn btn-light btn btn-block">Turmas</a>
+                <a href="disciplinas.html" class="btn btn-light btn btn-block">Disciplinas</a>
+                <a href="professores.html" class="btn btn-light btn btn-block">Professores</a>
+                <a href="alunos.html" class="btn btn-light btn btn-block">Alunos</a>
+                <a href="responsaveis.html" class="btn btn-light btn btn-block">Responsáveis</a>
+                <a href=".." class="mobile btn btn-danger btn btn-block" >Sair</a>
             </div>
         </div>
 
