--- a/assets/projects/webschool/admin/aluno.html
+++ b/assets/projects/webschool/admin/aluno.html
@@ -3,36 +3,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="../../includes/css/glyphicons.css" rel="stylesheet">
-        <link href="../../includes/css/navbar.css" rel="stylesheet">
-        <script src="../../includes/js/jquery.js">
+        <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/navbar.css" rel="stylesheet">
+        <script src="../includes/js/jquery.js">
         </script>
         <script>
-        function verificarLogin(val) {
-            $.ajax({
-                type: "POST",
-                url: "/webschool/verificarLogin",
-                data: { login : val, tipo : "aluno", id : $("#id").val()},
-                success: function(data ){
-                    if (data == 1){
-                        $("#disponibilidade").show();
-                        $("#btn").attr("disabled", true)
-                    } else {
-                        $("#disponibilidade").hide();
-                        $("#btn").attr("disabled", false)
-                    }
-                    console.log(data);
-                }
-            });
-        }
-
-        $(document).on('focusout', '#email', function(){
-              verificarLogin($("#email").val());
-        });
-
-        $(document).ready(function(){
-           $("#disponibilidade").hide();
-        });
         </script>
         <title>webSchool :: Alteração de Aluno</title>
     </head>
@@ -46,8 +21,8 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../home">Home</a>
-                            <a class="dropdown-item" href="../../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -68,16 +43,13 @@
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3">
-                                <input type="text" name="nome" id="nome" placeholder="Nome" aria-describedby="disponibilidade" value="{NOME}" class="form-control form-control-sm" required >
+                                <input type="text" name="nome" id="nome" placeholder="Nome" aria-describedby="disponibilidade" value="Aluno" class="form-control form-control-sm" required >
                         </div>
                     </div>
                     <div class="form-group row justify-content-center ">
                         <label for="email" class="col-form-label col-md-2 col-form-label-sm">Login:</label>
                         <div class="col-md-3">
-                            <input type="text" name="email" id="email" value="{EMAIL}" class="form-control form-control-sm" required >
-                            <small id="disponibilidade">
-                                Login em uso!
-                            </small>
+                            <input type="text" name="email" id="email" value="aluno@mail.com" class="form-control form-control-sm" required >
                         </div>
                     </div>
                     <div class="form-group row justify-content-center ">
@@ -90,11 +62,13 @@
                         <label for="turma" class="col-form-label col-md-2 col-form-label-sm ">Turma:</label>
                         <div class="col-md-3">
                             <select name="turma" class="form-control form-control-sm ">
-                                {TURMAS}
+                                <option value='2'>1 º Série </option>
+                                <option value='3'>2 º Série </option>
+                                <option value='4'>3 º Série </option>
                             </select>
                         </div>
                     </div>
-                    <button type="submit" id="btn" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</button>
+                    <a href="alunos.html" type="submit" id="btn" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</a>
                 </form>
             </div>
         </div>
