--- a/assets/projects/webschool/admin/disciplina.html
+++ b/assets/projects/webschool/admin/disciplina.html
@@ -3,9 +3,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="../../includes/css/glyphicons.css" rel="stylesheet">
-        <link href="../../includes/css/navbar.css" rel="stylesheet">
-        <script src="../../includes/js/jquery.js"></script>
+        <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/navbar.css" rel="stylesheet">
+        <script src="../includes/js/jquery.js"></script>
         <title>webSchool :: Alteração de Disciplina</title>
     </head>
     <body>
@@ -18,8 +18,8 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../home">Home</a>
-                            <a class="dropdown-item" href="../../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -38,7 +38,7 @@
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome da Disciplina:</label>
                         <div class="col-md-3">
-                            <input type="text" name="nome" value="{NOME}" class="form-control form-control-sm" required>
+                            <input type="text" name="nome" value="Disciplina" class="form-control form-control-sm" required>
                         </div>
                     </div>
                     <button type="submit" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</button>
