--- a/assets/projects/webschool/admin/responsaveis.html
+++ b/assets/projects/webschool/admin/responsaveis.html
@@ -8,48 +8,16 @@
         <link href="../includes/css/navbar.css" rel="stylesheet">
         <link href="../includes/css/datatables.css" rel="stylesheet">
         <script src="../includes/js/jquery.js"></script>
-        <script>
-        function verificarLogin(val) {
-            $.ajax({
-                type: "POST",
-                url: "/webschool/verificarLogin",
-                data: { login : val, tipo : "responsavel" },
-                success: function(data){
-                    if (data == 1){
-                        $("#disponibilidade").show();
-                        $("#btn").attr("disabled", true)
-                    } else {
-                        $("#disponibilidade").hide();
-                        $("#btn").attr("disabled", false)
-                    }
-                    console.log(data);
-                }
-            });
-        }             
+        <script>     
             
         function deletarResponsavel(val) {
-            $.ajax({
-                url: "responsavel/" + val + '/delete',
-                type: "DELETE",
-                success: function(data){
-                    /* $('#row-'+val).fadeOut(400, function(){
-                        remove();
-                    });
-                    console.log(data); */
-                }
+            $('#row-'+val).fadeOut(400, function(){
+                remove();
             });
         }
 
         $(document).on('click', '#deletar', function(){
             deletarResponsavel(this.value);
-        });
-
-        $(document).on('focusout', '#email', function(){
-            verificarLogin(this.value);
-        });
-
-        $(document).ready(function(){
-            $("#disponibilidade").hide();
         });
         
         $(document).ready( function () {
@@ -74,8 +42,8 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="home">Home</a>
-                            <a class="dropdown-item" href="../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -99,9 +67,6 @@
                         <label for="email" class="col-form-label col-md-2 col-form-label-sm ">Login:</label>
                         <div class="col-md-3">
                             <input type="text" name="email" id="email" class="form-control form-control-sm" aria-describedby="disponibilidade" required>
-                            <small id="disponibilidade">
-                                Login em uso!
-                            </small>
                         </div>
                     </div>
                     <div class="form-group row justify-content-center ">
@@ -110,7 +75,7 @@
                             <input type="password" name="password" class="form-control form-control-sm" required>
                         </div>
                     </div>
-                    <button type="submit" id="btn" class="btn btn-primary btn-sm"><span class='glyphicon glyphicon-plus'></span> Cadastrar</button>
+                    <a href="responsaveis.html" type="submit" id="btn" class="btn btn-primary btn-sm"><span class='glyphicon glyphicon-plus'></span> Cadastrar</a>
                 </form>
 
                 <p><strong>Lista de Responsaveis</strong></p>
@@ -121,7 +86,12 @@
                         <tr><td>Nome</td><td>Status</td><td>Editar</td><td>Remover</td></tr>
                     </thead>
                     <tbody>
-                        {RESPONSAVEIS}
+                        <tr id='row-1'><td>Responsavel 1 </td>
+                        <td><span class='glyphicon glyphicon-remove'></span> </td><td><a href='responsavel.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar' value='1'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
+                        <tr id='row-2'><td>Responsavel 2 </td>
+                        <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='responsavel.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar' value='2'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
                     </tbody>
                 </table>
 
