--- a/assets/projects/webschool/admin/responsavel.html
+++ b/assets/projects/webschool/admin/responsavel.html
@@ -3,39 +3,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="../../includes/css/glyphicons.css" rel="stylesheet">
-        <link href="../../includes/css/navbar.css" rel="stylesheet">
-        <script src="../../includes/js/jquery.js">
+        <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/navbar.css" rel="stylesheet">
+        <script src="../includes/js/jquery.js">
         </script>
         <script>
-        function verificarLogin(val) {
-            $.ajax({
-                type: "POST",
-                url: "/webschool/verificarLogin",
-                data: { login : val, tipo : "responsavel", id : $("#id").val()},
-                success: function(data ){
-                    if (data == 1){
-                        $("#disponibilidade").show();
-                        $("#btn").attr("disabled", true)
-                    } else {
-                        $("#disponibilidade").hide();
-                        $("#btn").attr("disabled", false)
-                    }
-                    console.log(data);
-                }
-            });
-        }
         
         function deletarResponsavelPorAluno(val) {
-            $.ajax({
-                url: "/webschool/admin/alunoPorResponsavel/" + val,
-                type: "DELETE",
-                success: function(data){
-                    $('#row-'+val).fadeOut(400, function(){
-                        this.remove();
-                    });
-                    console.log(data);
-                }
+            $('#row-'+val).fadeOut(400, function(){
+                this.remove();
             });
         }
 
@@ -43,13 +19,6 @@
             deletarResponsavelPorAluno(this.value);
         });
 
-        $(document).on('focusout', '#email', function(){
-              verificarLogin($("#email").val());
-        });
-
-        $(document).ready(function(){
-           $("#disponibilidade").hide();
-        });
         </script>
         <title>webSchool :: Alteração de Responsável</title>
     </head>
@@ -63,8 +32,8 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../home">Home</a>
-                            <a class="dropdown-item" href="../../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -84,16 +53,13 @@
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3">
-                                <input type="text" name="nome" id="nome" placeholder="Nome" aria-describedby="disponibilidade" value="{NOME}" class="form-control form-control-sm" required >
+                                <input type="text" name="nome" id="nome" placeholder="Nome" aria-describedby="disponibilidade" value="Responsavel" class="form-control form-control-sm" required >
                         </div>
                     </div>
                     <div class="form-group row justify-content-center ">
                         <label for="email" class="col-form-label col-md-2 col-form-label-sm">Login:</label>
                         <div class="col-md-3">
-                            <input type="text" name="email" id="email" value="{EMAIL}" class="form-control form-control-sm" required >
-                            <small id="disponibilidade">
-                                Login em uso!
-                            </small>
+                            <input type="text" name="email" id="email" value="responsavel@mail.com" class="form-control form-control-sm" required >
                         </div>
                     </div>
                     <div class="form-group row justify-content-center ">
@@ -102,7 +68,7 @@
                                 <input type="password" name="password" class="form-control form-control-sm" >
                         </div>
                     </div>
-                    <button type="submit" id="btn" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</button>
+                    <a href="responsaveis.html" type="submit" id="btn" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</a>
                 </form>
 
                 <p><strong>Cadastrar aluno para responsável</strong></p>
@@ -114,19 +80,23 @@
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3" >
                             <select name="aluno" class="form-control form-control-sm">
-                                {ALUNOS}
+                                <option value='970'>Aluno ( na 1º Série )</option>
+                                <option value='970'>Aluno ( na 3º Série )</option>
+                                <option value='970'>Aluno ( na 2º Série )</option>
+                                <option value='970'>Aluno ( na 4º Série B )</option>
                             </select>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-sm"><span class='glyphicon glyphicon-plus'></span> Cadastrar</button>
+                    <a href="responsavel.html" type="submit" class="btn btn-primary btn-sm"><span class='glyphicon glyphicon-plus'></span> Cadastrar</a>
                 </form>
 
-                <table style="margin-left: auto; margin-right: auto; font-size: 13; width: 50%;" class="table">
+                <table style="margin-left: auto; margin-right: auto; font-size: 13; width: auto !important;" class="table">
                     <thead>
                         <tr><td>Nome</td><td>Turma</td><td>Remover</td></tr>
                     </thead>
                     <tbody>
-                        {FILHOS}
+                        <tr id='row-1'><td>Aluno</td><td> na 1º Série </td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar' value='1'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
                     </tbody>
                 </table>
             </div>
