--- a/assets/projects/webschool/admin/turma.html
+++ b/assets/projects/webschool/admin/turma.html
@@ -3,9 +3,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="../../includes/css/glyphicons.css" rel="stylesheet">
-        <link href="../../includes/css/navbar.css" rel="stylesheet">
-        <script src="../../includes/js/jquery.js"></script>
+        <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/navbar.css" rel="stylesheet">
+        <script src="../includes/js/jquery.js"></script>
         <title>webSchool :: Alteração de Turma</title>
     </head>
     <body>
@@ -18,8 +18,8 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../home">Home</a>
-                            <a class="dropdown-item" href="../../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -34,7 +34,7 @@
                 <strong>Alteração de Turma</strong><p/>
                 <form action="/webschool/admin/turma" method="post" role="form" class="form-horizontal " >
                     <input type="hidden" name="_method" value="PUT" />
-                    <input type="hidden" name="id" value="{ID}" />
+                    <input type="hidden" name="id" value="2" />
                     <div class="form-group row justify-content-center ">
                         <label for="serie" class="col-form-label col-md-2 col-form-label-sm">Série:</label>
                         <div class="col-md-3">
@@ -49,16 +49,16 @@
                                 <option value='8'>8º Série</option>
                                 <option value='9'>9º Série</option>
                             </select> 
-                            <small id="avisoSerie" class="form-text text-muted">(Atualmente {TURMA} º Série)</small>
+                            <small id="avisoSerie" class="form-text text-muted">(Atualmente 1 º Série)</small>
                         </div>
                     </div>
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Letra da Turma:</label>
                         <div class="col-md-3">
-                            <input type="text" name="nome" class="form-control form-control-sm" value="{LETRA}">
+                            <input type="text" name="nome" class="form-control form-control-sm" value="">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</button>
+                    <a href="turmas.html" type="submit" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</a>
                 </form>
             </div>
         </div>
