--- a/assets/projects/webschool/admin/turmas.html
+++ b/assets/projects/webschool/admin/turmas.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -9,14 +8,8 @@
         <script src="../includes/js/jquery.js"></script>
         <script>
         function deletarTurma(val) {
-            $.ajax({
-                url: "turma/" + val + '/delete',
-                type: "DELETE",
-                success: function(data){
-                    $('#row-'+val).fadeOut(400, function(){
-                        remove();
-                    });
-                }
+            $('#row-'+val).fadeOut(400, function(){
+                remove();
             });
         }
 
@@ -36,8 +29,8 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="home">Home</a>
-                            <a class="dropdown-item" href="../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -84,7 +77,13 @@
                         <tr><td>Nome</td><td>Editar</td><td>Remover</td></tr>
                     </thead>
                     <tbody>
-                        {ALUNOS}
+                        <tr id='row-2'><td>1 º Série </td>
+                        <td><a href='turma.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a></td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar' value='2'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr><tr id='row-3'><td>2 º Série </td>
+                        <td><a href='turma.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a></td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar' value='3'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr><tr id='row-4'><td>3 º Série </td>
+                        <td><a href='turma.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a></td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar' value='4'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
                     </tbody>
                 </table>
 
