--- a/assets/projects/webschool/perfil.html
+++ b/assets/projects/webschool/perfil.html
@@ -104,16 +104,16 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="{TIPO}/home">webSchool</a>
+            <a class="navbar-brand" href="#">webSchool</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Logado como {LOGADO}
+                            Logado como Usuário
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{TIPO}/home">Home</a>
-                            <a class="dropdown-item" href="logout">Sair</a>
+                            <a class="dropdown-item" href="#">Home</a>
+                            <a class="dropdown-item" href="index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
