--- a/assets/projects/webschool/professor/diariodeclasse.html
+++ b/assets/projects/webschool/professor/diariodeclasse.html
@@ -140,7 +140,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="../../home">webSchool</a>
+            <a class="navbar-brand" href="index.html">webSchool</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
@@ -148,9 +148,9 @@
                             Logado como {LOGADO}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../home">Home</a>
-                            <a class="dropdown-item" href="../../perfil">Meu perfil</a>
-                            <a class="dropdown-item" href="../../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="../perfil.html">Meu perfil</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
