--- a/assets/projects/webschool/professor/index.html
+++ b/assets/projects/webschool/professor/index.html
@@ -11,16 +11,16 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="home">webSchool</a>
+            <a class="navbar-brand" href="index.html">webSchool</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Logado como {LOGADO}
+                            Logado como Professor
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../perfil">Meu perfil</a>
-                            <a class="dropdown-item" href="../logout">Sair</a>
+                            <a class="dropdown-item" href="index.html">Meu perfil</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -33,9 +33,9 @@
 
         <div class="container">
             <div class="jumbotron text-center">
-                <a href="turmas" class="btn btn-light btn btn-block">Turmas</a>
-                <a href="../perfil.php" class="mobile btn btn-dark btn btn-block" >Meu Perfil</a>
-                <a href="../logout" class="mobile btn btn-danger btn btn-block" >Sair</a>
+                <a href="turmas.html" class="btn btn-light btn btn-block">Turmas</a>
+                <a href="../perfil.html" class="mobile btn btn-dark btn btn-block" >Meu Perfil</a>
+                <a href="../index.html" class="mobile btn btn-danger btn btn-block" >Sair</a>
                 <!-- <a href="solicitacoes.php">Fazer solicitações ao administrador</a><br/> -->
             </div>
         </div>
